-
Bug
-
Resolution: Fixed
-
P1: Critical
-
5.15.17, 5.15.18
-
-
f43f6e493 (dev), 9fbc709a9 (6.9), b25be970e (6.8), bc1cc72b4 (tqtc/lts-6.5)
Attached simple example crashes after a while and consumes lots of memory. This can be easily reproduced on Debian 11, On windows (I could not crash it ) but shows memory leak.
Steps to reproduce:
-Run the application and bring the mouse on the application window
-Leave it running for couple of hours and observe crash. ( I left it running overnight)
Note: Very important, under no circumstance Mouse should move otherwise this will not crash.
Following tiny script if you run will show memory usage:
while true; do TIMESTAMP=$(date '+%Y-%m-%d %H:%M:%S') MEMORY=$(cat /proc/$(pgrep -f "HoverHandlerTestApp")/status | grep -E 'VmRSS' | awk '{print $2, $3}') echo "$TIMESTAMP $MEMORY" | tee -a HoverHandler.txt --append sleep 5 done
- relates to
-
QTBUG-136976 QHoverEvent::HoverMove Triggered Repeatedly on Stationary Mouse When Unrelated QQuickItem Changes
-
- In Progress
-
For Gerrit Dashboard: QTBUG-135975 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
640315,3 | DeliveryAgent: clear deviceDeliveryTargets before hover delivery | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
640385,2 | DeliveryAgent: clear deviceDeliveryTargets before hover delivery | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
640410,2 | DeliveryAgent: clear deviceDeliveryTargets before hover delivery | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
640689,1 | DeliveryAgent: clear deviceDeliveryTargets before hover delivery | 6.8.3 | qt/qtdeclarative | Status: ABANDONED | +2 | 0 |
640690,2 | DeliveryAgent: clear deviceDeliveryTargets before hover delivery | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |