DeliveryAgent: clear deviceDeliveryTargets before hover delivery

deliverPointerEvent() and deliverSinglePointEventUntilAccepted() already
clear the QQuickPointingDeviceExtra::deliveryTargets list before each
event delivery (since a97759a336c597327cb82eebc9f45c793aec32c9 and
262d7eb305e1dea8dac660bec3ccc50193258ea9). deliverHoverEvent() needs to
do that too: in case there are a lot of hover delivery targets and the
user doesn't move the mouse for a long time, but the scene is
continuously updated, flushFrameSynchronousEvents() keeps sending hover
events, and this list would keep growing if we don't clear it each time.

Fixes: QTBUG-135975
Change-Id: Ia91e3c977b45fc964228d3aad89938435f437449
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit f43f6e49333aea97856c426a1ecf12afe80c1184)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 9fbc709a9381efed45ca8316847f716deee0bd95)
(cherry picked from commit b25be970eed9bff96c74c0ab8d78788c72d87035)